// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner accepts non-preset colors 1`] = `
.c0 {
  background-color: #687B8E;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  text-align: left;
}

.c4 {
  font-size: 14px;
}

.c3 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color={undefined}
>
  <div
    className="c1"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <h5
          className="c3"
        />
        <span
          className="c4"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders content from children props 1`] = `
.c0 {
  color: #fff;
  background-color: #0a0;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10.3,16.5L6,12.2L7.2,11
      	l3.1,3.1l6.5-6.5L18,8.8L10.3,16.5z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
        <span>
          123
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with blue bg 1`] = `
.c0 {
  color: #fff;
  background-color: #007aff;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,17h-2v-6h2V17z M13,9h-2V7
      	h2V9z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with custom iconName and size 1`] = `
.c0 {
  color: #fff;
  background-color: #0a0;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,17.8l6.2,3.7l-1.6-7L22,9.7l-7.2-0.6L12,2.5L9.2,9.1L2,9.7l5.5,4.8l-1.6,7L12,17.8z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with green bg 1`] = `
.c0 {
  color: #fff;
  background-color: #0a0;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10.3,16.5L6,12.2L7.2,11
      	l3.1,3.1l6.5-6.5L18,8.8L10.3,16.5z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightBlue bg 1`] = `
.c0 {
  color: #049;
  background-color: #cdf;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="darkBlue"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,17h-2v-6h2V17z M13,9h-2V7
      	h2V9z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightGreen bg 1`] = `
.c0 {
  color: #060;
  background-color: #cec;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="darkGreen"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10.3,16.5L6,12.2L7.2,11
      	l3.1,3.1l6.5-6.5L18,8.8L10.3,16.5z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightOrange bg 1`] = `
.c0 {
  color: #a50;
  background-color: #feb;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="darkOrange"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,21.5h22l-11-19L1,21.5z M13,18.5h-2v-2h2V18.5z M13,14.5h-2v-4h2V14.5z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with lightRed bg 1`] = `
.c0 {
  color: #800;
  background-color: #fcc;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="darkRed"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,13h-2V7h2V13z M13,17h-2v-2
      	h2V17z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with no props other than theme 1`] = `
.c0 {
  color: #fff;
  background-color: #0a0;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M10.3,16.5L6,12.2L7.2,11
      	l3.1,3.1l6.5-6.5L18,8.8L10.3,16.5z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with orange bg 1`] = `
.c0 {
  color: #fff;
  background-color: #fa0;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,21.5h22l-11-19L1,21.5z M13,18.5h-2v-2h2V18.5z M13,14.5h-2v-4h2V14.5z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with red bg 1`] = `
.c0 {
  color: #fff;
  background-color: #c00;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M13,13h-2V7h2V13z M13,17h-2v-2
      	h2V17z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        />
        <span
          className="c5"
          fontSize={1}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with text node 1`] = `
.c0 {
  color: #fff;
  background-color: #0a0;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,17.8l6.2,3.7l-1.6-7L22,9.7l-7.2-0.6L12,2.5L9.2,9.1L2,9.7l5.5,4.8l-1.6,7L12,17.8z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        >
          Header
        </h5>
        <span
          className="c5"
          fontSize={1}
        >
          <div
            className=""
          >
            Text
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Banner renders with text string 1`] = `
.c0 {
  color: #fff;
  background-color: #0a0;
  text-align: left;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  text-align: left;
}

.c5 {
  font-size: 14px;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
  margin-top: -2px;
  height: 24px;
  width: 24px;
}

.c4 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<div
  className="c0"
  color="white"
>
  <div
    className="c1"
  >
    <svg
      className="c2"
      fill="currentcolor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,17.8l6.2,3.7l-1.6-7L22,9.7l-7.2-0.6L12,2.5L9.2,9.1L2,9.7l5.5,4.8l-1.6,7L12,17.8z"
      />
    </svg>
    <div
      className=""
    >
      <div
        className="c3"
      >
        <h5
          className="c4"
        >
          Header
        </h5>
        <span
          className="c5"
          fontSize={1}
        >
          Text
        </span>
      </div>
    </div>
  </div>
</div>
`;
